--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,6 @@
   html,
   body,
   #__next {
-    @apply flex flex-col h-full bg-primary-200 dark:bg-primary-800 text-primary-800 dark:text-primary-100;
+    @apply flex flex-col h-full;
   }
 }
