--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,9 @@
     @apply flex flex-col h-full;
   }
 }
+
+@layer components {
+    svg {
+        @apply transition hover:text-blue-600;
+    }
+}
