--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,13 +20,12 @@
 
 .content-wrapper {
   height: 270px;
-  width: 200px;
+  width: 220px;
 }
 
 .tree {
-  position: absolute;
+  position: relative;
   text-align: center;
-  width: 270px;
 }
 .tree:before {
   background-color: #4D4139;
